Animate main and make sure content is always visible.

--- a/src/app/blocks/main/main.component.scss
+++ b/src/app/blocks/main/main.component.scss
@@ -3,15 +3,18 @@ section {
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 120px;
   width: auto;
   overflow: hidden;
   background: #f1f1f1;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
 }
 
 @media(max-width:767px){
   section {
     top: 60px;
+    left: 0;
   }
 }
 @media(min-width:768px){
